add geolocation to test 🚀
geolocation can use on only web that is HTTPS

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
+<!-- AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg -->
 <html lang="en">
-  <head>
+
+<head>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg&callback=initMap"
+        async defer></script>
+    <script type="module" src="../src/back/map_api.js" async defer></script>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta charset="utf-8" />
+
     <title>Muvwheel</title>
-  </head>
-  <body>
+
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
