update flow to select method🔨
set user scalable
update a lot of map API
updatedestination 1 2

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 
 <head>
     <script type="module" src="../src/back/map_api.js" async defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg&callback=initMap"
+    <script type="module" src="../src/pages/Destination.js" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg&libraries=places"
         async defer></script>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=maximum-scale, user-scalable=0">
     <meta charset="utf-8" />
 
     <title>Muvwheel</title>
