--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="../src/pages/Destination.js" async defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg&libraries=places"
         async defer></script>
-        <meta name="viewport" content="width=device-width, initial-scale=maximum-scale, user-scalable=0">
+        <meta name="viewport" content="width=device-width, initial-scale=max-scale, user-scalable=no">
     <meta charset="utf-8" />
 
     <title>Muvwheel</title>
