--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="../src/pages/Destination.js" async defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUP4lwuTEXSPnFmJIY_eGSEnOGDGPxMRg&libraries=places"
         async defer></script>
-        <meta name="viewport" content="width=device-width, initial-scale=max-scale, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=max-scale, user-scalable=no">
     <meta charset="utf-8" />
 
     <title>Muvwheel</title>
@@ -16,8 +16,10 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="recaptcha-container"></div>
+    <div id="root">
 
-    <div id="root"></div>
+    </div>
 </body>
 
 </html>
